Fix content being cut-off when the vh was too small

--- a/client/src/styles/components/root.module.scss
+++ b/client/src/styles/components/root.module.scss
@@ -2,9 +2,10 @@
 
 #root {
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   font-family: Lato, sans-serif;
   overflow-y: hidden;
 }
+
